--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,53 +1,65 @@
+.home-container {
+  max-width: 800px;
+  margin: 0 auto;
+  margin-top: 70px;
+  padding: 2rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  
+}
+.home-container:hover{
+  transform: translateY(-2px);
+}
 
-  .home-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 2rem;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    background-color: #fff;
-  }
-  
+.h1-home {
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+  color: #3498db;
+  text-align: center;
+  line-height: 1.6;
+  border-bottom: 2px solid #3498db;
+}
 
-  .h1-home {
-    font-size: 3rem;
-    margin-bottom: 1.5rem;
-    color: #3498db; 
-    text-align: center;
-  }
-  
+.h3-home {
+  font-size: 1.2rem;
+  margin-bottom: 1.2rem;
+  color: #666;
+}
+.profile-img {
+  width: 200px;
+  height: 300px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+}
 
-  
-  
-  .h3-home {
-    font-size: 1.2rem;
-    margin-bottom: 1.2rem;
-    color: #666; 
-  }
-  .profile-img{
-    width: 200px; 
-    height: 200px;
-  }
-  
+/* body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  background-color: #f0f0f0;
+} */
 
-  a {
-    color: #3498db; 
-    text-decoration: none;
-    transition: color 0.3s ease-in-out;
+a {
+  color: #3498db;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+a:hover {
+  color: #1abc9c; /* Green color on hover */
+}
+
+/* Optional: Add a responsive design for smaller screens */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
   }
-  
-  a:hover {
-    color: #1abc9c; /* Green color on hover */
+
+  h3 {
+    font-size: 1rem;
   }
-  
-  /* Optional: Add a responsive design for smaller screens */
-  @media (max-width: 768px) {
-    h1 {
-      font-size: 2.5rem;
-    }
-  
-    h3 {
-      font-size: 1rem;
-    }
-  }
-  
+}
