animation for the portafolio

--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -6,28 +6,29 @@
   gap: 30px;
 }
 .project1 {
-  box-shadow: 10px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
   margin: auto;
+  margin-top: 15px;
 }
 .project2 {
-  box-shadow: 10px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
-  margin: 0px 250px 0px 250px;
+  margin: 0px 300px 0px 300px;
 }
 .project3 {
-  box-shadow: 10px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
   margin: 0px 250px 0px 250px;
 }
 .project4 {
-  box-shadow: 10px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
