--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,7 +5,7 @@
   padding: 2rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #333;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   
 }
@@ -25,7 +25,7 @@
 .h3-home {
   font-size: 1.2rem;
   margin-bottom: 1.2rem;
-  color: #666;
+  color:  #fff;
 }
 .profile-img {
   width: 200px;
