--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -7,7 +7,7 @@
 }
 .project1 {
   box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color:  #333;
   padding: 20px;
   border-radius: 8px;
   margin: auto;
@@ -15,21 +15,21 @@
 }
 .project2 {
   box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: #333;
   padding: 20px;
   border-radius: 8px;
   margin: 0px 300px 0px 300px;
 }
 .project3 {
   box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color:  #333;
   padding: 20px;
   border-radius: 8px;
   margin: 0px 250px 0px 250px;
 }
 .project4 {
   box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: #333;
   padding: 20px;
   border-radius: 8px;
   margin: 0px 250px 0px 250px;
@@ -75,7 +75,7 @@
   font-family: "Arial", sans-serif;
   font-size: 24px;
   font-weight: bold;
-  color: #333;
+  color: #3498db;
   margin-bottom: 10px;
   font-size: 28px;
 }
@@ -83,7 +83,7 @@
   font-family: "Arial", sans-serif;
   font-size: 24px;
   font-weight: bold;
-  color: #333;
+  color: #3498db;
   margin-bottom: 10px;
   font-size: 28px;
 }
@@ -92,7 +92,7 @@
   font-family: "Arial", sans-serif;
   font-size: 24px;
   font-weight: bold;
-  color: #333;
+  color:  #3498db;
   margin-bottom: 10px;
   font-size: 28px;
 }
@@ -101,20 +101,22 @@
   font-family: "Arial", sans-serif;
   font-size: 24px;
   font-weight: bold;
-  color: #333;
+  color: #3498db;
   margin-bottom: 10px;
   font-size: 28px;
 }
 
 .project-tools {
   font-size: 14px;
-  color: #777;
+  color: #fff;
 }
 .img-container img {
   border: 1px solid #ddd;
   border-radius: 4px;
 }
-
+.project-description{
+  color: #fff
+}
 .project1:hover, .project2:hover, .project3:hover, .project4:hover {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   transform: translateY(-2px);
