--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -32,6 +32,7 @@
   height: 300px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   border-radius: 50%;
+  border: 5px solid #3498db;
 }
 
 .profile-container{
