--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -155,21 +155,21 @@
 
 @media (max-width: 576px) {
   .project-container {
-    gap: 20px; /* Reduce the gap between elements for smaller screens */
+    gap: 20px; 
   }
 
   .project1,
   .project2,
   .project3,
   .project4 {
-    margin: 0; /* Remove the horizontal margins for individual projects */
+    margin: 0;
   }
 
   .img-project1,
   .img-project2,
   .img-project3,
   .img-project4 {
-    width: 150px; /* Adjust the image size for smaller screens */
+    width: 150px;
     height: 150px;
   }
 
@@ -177,14 +177,14 @@
   .title-project2,
   .title-project3,
   .title-project4 {
-    font-size: 20px; /* Adjust the font size for project titles */
+    font-size: 20px;
   }
 
   .project-button {
-    font-size: 14px; /* Adjust the font size for buttons */
+    font-size: 14px; 
   }
 
   .project-description {
-    font-size: 14px; /* Adjust the font size for project descriptions */
-  }
+    font-size: 14px; 
+}
 }
