--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -18,27 +18,27 @@
   background-color: #333;
   padding: 20px;
   border-radius: 8px;
-  /* margin: 0px 700px 0px 700px */
-  margin-left: 500px;
-  margin-right: 500px;
+  margin: 0px 700px 0px 700px
+  /* margin-left: 500px;
+  margin-right: 500px; */
 }
 .project3 {
   box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
   background-color: #333;
   padding: 20px;
   border-radius: 8px;
-  /* margin: 0px 700px 0px 700px; */
-  margin-left: 500px;
-  margin-right: 500px;
+  margin: 0px 700px 0px 700px;
+  /* margin-left: 500px;
+  margin-right: 500px; */
 }
 .project4 {
   box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
   background-color: #333;
   padding: 20px;
   border-radius: 8px;
-  /* margin: 0px 700px 0px 700px; */
-  margin-left: 500px;
-  margin-right: 500px;
+  margin: 0px 700px 0px 700px;
+  /* margin-left: 500px;
+  margin-right: 500px; */
 }
 .img-project1 {
   width: 200px;
