logo,webname,project

--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -10,8 +10,8 @@
   background-color: #333;
   padding: 20px;
   border-radius: 8px;
-  margin: 15px auto; /* Adjust vertical margin to create space between projects */
-  max-width: 600px; /* Set a maximum width for projects */
+  margin: 15px auto; 
+  max-width: 600px; 
 }
 
 .project2 {
@@ -19,8 +19,8 @@
   background-color: #333;
   padding: 20px;
   border-radius: 8px;
-  margin: 15px auto; /* Adjust vertical margin to create space between projects */
-  max-width: 600px; /* Set a maximum width for projects */
+  margin: 15px auto; 
+  max-width: 600px; 
 }
 
 .project3 {
@@ -28,8 +28,8 @@
   background-color: #333;
   padding: 20px;
   border-radius: 8px;
-  margin: 15px auto; /* Adjust vertical margin to create space between projects */
-  max-width: 600px; /* Set a maximum width for projects */
+  margin: 15px auto; 
+  max-width: 600px; 
 }
 
 .project4 {
@@ -37,8 +37,8 @@
   background-color: #333;
   padding: 20px;
   border-radius: 8px;
-  margin: 15px auto; /* Adjust vertical margin to create space between projects */
-  max-width: 600px; /* Set a maximum width for projects */
+  margin: 15px auto; 
+  max-width: 600px; 
 }
 
 .img-project1 {
