--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,5 @@
 .home-container {
+  /* font-family: "Arial", sans-serif; */
   max-width: 800px;
   margin: 0 auto;
   margin-top: 70px;
@@ -30,7 +31,7 @@
   width: 200px;
   height: 300px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
+  border-radius: 30px;
   border: 5px solid #3498db;
 }
 
@@ -59,7 +60,7 @@ a:hover {
 }
 
 .icons-container svg {
-  font-size: 24px;
+  font-size: 35px;
   color: #3498db;
   transition: color 0.3s ease;
 }
