--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
   padding: 0 ;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 
 
 
