--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -88,6 +88,9 @@
   color: #3498db;
   margin-bottom: 10px;
   font-size: 28px;
+  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid #3498db;
 }
 .title-project2 {
   font-family: "Arial", sans-serif;
@@ -96,6 +99,9 @@
   color: #3498db;
   margin-bottom: 10px;
   font-size: 28px;
+  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid #3498db;
 }
 
 .title-project3 {
@@ -105,6 +111,9 @@
   color: #3498db;
   margin-bottom: 10px;
   font-size: 28px;
+  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid #3498db;
 }
 
 .title-project4 {
@@ -114,6 +123,9 @@
   color: #3498db;
   margin-bottom: 10px;
   font-size: 28px;
+  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid #3498db;
 }
 
 .project-tools {
