--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -42,6 +42,15 @@
   max-width: 600px; 
 }
 
+.project5{
+  box-shadow: 10px 4px 8px 4px rgba(0, 0, 0, 0.1);
+  background-color: #333;
+  padding: 20px;
+  border-radius: 8px;
+  margin: 15px auto; 
+  max-width: 600px; 
+}
+
 
 
 .img-project1 {
@@ -69,6 +78,13 @@
 .img-project4 {
   width: 200px;
   height: 200px;
+  transition: transform 0.3s ease;
+  border: 2px solid #ddd;
+  border-radius: 8px;
+}
+.img-project5{
+  width: 175px;
+  height: 245px;
   transition: transform 0.3s ease;
   border: 2px solid #ddd;
   border-radius: 8px;
@@ -127,10 +143,22 @@
   padding-bottom: 0.5rem;
   border-bottom: 2px solid #3498db;
 }
+.title-project5{
+  font-family: "Arial", sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: #3498db;
+  margin-bottom: 10px;
+  font-size: 28px;
+  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid #3498db;
+}
 
 .project-tools {
   font-size: 14px;
   color: #fff;
+  margin-top: 10px;
 }
 .img-container img {
   border: 1px solid #ddd;
