--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,46 +1,44 @@
-
-
 .nav-bar {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background: #36626c;
+  padding: 1rem 0;
+  font-size: 1.2rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.nav-bar li {
+  list-style: none;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  margin: 0 1rem;
+}
+
+.nav-bar li a {
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  text-decoration: none;
+  background: #36626c;
+}
+
+.nav-bar .active-link {
+  text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .nav-bar {
+    flex-direction: column;
     align-items: center;
-    padding: 30px 10%;
-    background-color: #333; 
-    color: #fff; 
-    padding: 1rem 0;
-    font-size: 1.2rem;
-    margin: 0px
   }
-  
+
   .nav-bar li {
-    list-style: none;
-    font-weight: 500;
-    font-size: 16px;
-    color: #edf0f1;
-    cursor: pointer;
-  } 
-  
-  .nav-bar li a {
-    text-decoration: none;
-    color: #fff; 
-    transition: color 0.3s ease;
+    margin-bottom: 10px;
   }
-  
-  .nav-bar li a:hover {
-    color: #3498db; 
-  }
-  
-
-
-  @media (max-width: 768px) {
-    .nav-bar {
-      flex-direction: column; /* Stack the navigation items vertically */
-      padding: 1rem 0; /* Adjust the vertical padding */
-    }
-  
-    .nav-bar li {
-      margin-bottom: 10px; /* Add some spacing between navigation items */
-      text-align: center; /* Center the navigation items */
-    }
-  }
-  
+}
