--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,24 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0 ;
-  /* background:  #4B818D; */
-
+  padding: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
 body {
   font-family: "Roboto";
-  background:  #4B818D;
+  background: #4b818d;
 }
-
-
-
 
 .particles-container {
   position: absolute;
 
   top: 0;
   left: 0;
-  
 
   width: 100%;
   height: 100%;
-  
-  
-  z-index: -1; 
+
+  z-index: -1;
 }
