--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -22,14 +22,21 @@
 .nav-bar li a {
   color: #fff;
   font-family: "Roboto", sans-serif;
-  font-size: 20px;
-  font-weight: 700;
+  font-size: 25px;
+  font-weight: 900;
   text-decoration: none;
   background: #36626c;
 }
 
-.nav-bar .active-link {
+.about-link .active-link {
   text-decoration: underline;
+}
+.work-link .active-link {
+  text-decoration: underline;
+}
+.resume-link,
+.work-link {
+  text-decoration: none;
 }
 
 @media (max-width: 768px) {
