--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -38,7 +38,6 @@
 .work-link {
   text-decoration: none;
 }
-
 @media (max-width: 768px) {
   .nav-bar {
     flex-direction: column;
@@ -47,5 +46,9 @@
 
   .nav-bar li {
     margin-bottom: 10px;
+  }
+
+  .nav-bar li a {
+    font-size: 20px;
   }
 }
