--- a/src/pages/Work.css
+++ b/src/pages/Work.css
@@ -1,12 +1,84 @@
-.work-container {
+/* .work-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh; /* Set the container to take the full height of the viewport */
+    height: 100vh; 
   }
   .work-text {
   
     color: white;
   }
-  
+   */
+
+/********************************/
+
+.project-1-container,
+.project-2-container,
+.project-3-container,
+.project-4-container {
+  margin-top: 10vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.img-project1,
+.img-project2,
+.img-project3,
+.img-project4 {
+  display: block;
+  margin: 0 auto;
+  max-width: 50%;
+  height: auto;
+}
+.img-project1{
+  max-width: 20%;
+}
+.img-project2{
+  max-width: 30%;
+
+}
+
+
+.project-title {
+  color: #fff;
+  text-align: center;
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  margin-top: 42px;
+}
+.project-tools {
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  margin-top: 20px
+}
+h4{
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 20px;
+}
+.project-description{
+  color: #FFF;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 10vw;
+  max-width: 80vw;
+  margin-top: 20px;
+}
