--- a/src/pages/CustomSlider.css
+++ b/src/pages/CustomSlider.css
@@ -1,13 +1,12 @@
-/* CustomSlider.css */
 
 /* Modify the arrow styles and adjust the positioning */
 .slick-prev {
-    left: 90px; 
+    left: 500px; 
     z-index: 1; 
   }
   
   .slick-next {
-    right: 90px; 
+    right: 500px; 
     z-index: 1; 
   }
   
@@ -22,7 +21,7 @@
   /* Customize the dots */
   .slick-dots {
     position: absolute;
-    bottom: 20px; /* Adjust the distance from the bottom as needed */
+    bottom: -20px;
     width: 100%;
     padding: 0;
     margin: 0;
