--- a/src/pages/Work.css
+++ b/src/pages/Work.css
@@ -1,15 +1,3 @@
-/* .work-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh; 
-  }
-  .work-text {
-  
-    color: white;
-  }
-   */
 
 /********************************/
 
@@ -33,20 +21,24 @@
   margin: 0 auto;
   max-width: 50%;
   height: auto;
+  border-radius: 5px;
 }
 .img-project1{
   max-width: 20%;
 }
 .img-project2{
-  max-width: 30%;
+  max-width: 22%;
 
+}
+.img-project3{
+  height: 350px;
 }
 
 
 .project-title {
   color: #fff;
   text-align: center;
-  font-size: 35px;
+  font-size: 40px;
   font-style: normal;
   font-weight: 800;
   line-height: normal;
@@ -55,7 +47,7 @@
 .project-tools {
   color: #fff;
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
   font-style: normal;
   font-weight: 900;
   line-height: normal;
@@ -64,7 +56,7 @@
 h4{
   color: #fff;
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -74,7 +66,7 @@ h4{
   color: #FFF;
   text-align: center;
   font-family: Roboto;
-  font-size: 18px;
+  font-size: 22px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
