--- a/src/pages/Work.css
+++ b/src/pages/Work.css
@@ -4,7 +4,8 @@
 .project-1-container,
 .project-2-container,
 .project-3-container,
-.project-4-container {
+.project-4-container,
+.project-5-container {
   margin-top: 10vw;
   display: flex;
   flex-direction: column;
@@ -16,13 +17,25 @@
 .img-project1,
 .img-project2,
 .img-project3,
-.img-project4 {
+.img-project4,
+.img-project5 {
   display: block;
   margin: 0 auto;
   max-width: 50%;
   height: auto;
   border-radius: 5px;
+  transition: transform 0.3s, box-shadow 0.3s; /* Add transition for smooth effect */
 }
+.img-project1:hover,
+.img-project2:hover,
+.img-project3:hover,
+.img-project4:hover,
+.img-project5:hover {
+  cursor: pointer; /* Change the cursor to a pointer on hover */
+  transform: scale(1.05); /* Slightly increase the size on hover */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add a subtle box shadow on hover */
+}
+
 .img-project1{
   max-width: 20%;
 }
@@ -33,7 +46,12 @@
 .img-project3{
   height: 350px;
 }
-
+.img-project4{
+  max-width: 35%;
+}
+.img-project5{
+  max-width: 25%;
+}
 
 .project-title {
   color: #fff;
