--- a/src/pages/Work.css
+++ b/src/pages/Work.css
@@ -24,20 +24,20 @@
   max-width: 50%;
   height: auto;
   border-radius: 5px;
-  transition: transform 0.3s, box-shadow 0.3s; /* Add transition for smooth effect */
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 .img-project1:hover,
 .img-project2:hover,
 .img-project3:hover,
 .img-project4:hover,
 .img-project5:hover {
-  cursor: pointer; /* Change the cursor to a pointer on hover */
-  transform: scale(1.05); /* Slightly increase the size on hover */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add a subtle box shadow on hover */
+  cursor: pointer;
+  transform: scale(1.05); 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .img-project1{
-  max-width: 20%;
+  max-width: 25%;
 }
 .img-project2{
   max-width: 22%;
@@ -92,3 +92,5 @@ h4{
   max-width: 80vw;
   margin-top: 20px;
 }
+
+/*****************************/
