--- a/src/pages/CustomSlider.css
+++ b/src/pages/CustomSlider.css
@@ -1,35 +1,58 @@
-
 /* Modify the arrow styles and adjust the positioning */
 .slick-prev {
-    left: 300px; 
-    z-index: 1; 
-  }
-  
-  .slick-next {
-    right: 300px; 
-    z-index: 1; 
-  }
-  
- 
-  .slick-prev:before,
-  .slick-next:before {
-    font-size:40px;
-    color: pink;
-    z-index: 1; 
-  }
-  
-  /* Customize the dots */
-  .slick-dots {
-    position: absolute;
-    bottom: -20px;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    text-align: center;
+  left: 10%;
+  z-index: 1;
+}
+
+.slick-next {
+  right: 10%;
+  z-index: 1;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-size: 40px;
+  color: pink;
+  z-index: 1;
+}
+
+/* Customize the dots */
+.slick-dots {
+  position: absolute;
+  bottom: -20px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
 }
 
 .slick-dots li button:before {
-    font-size: 12px; 
-    color: pink;
+  font-size: 12px;
+  color: pink;
 }
+
+/* Media Queries */
+@media only screen and (max-width: 768px) {
+  .slick-prev {
+    left: 5%;
+  }
+
+  .slick-next {
+    right: 5%;
+  }
+
+  .slick-prev:before,
+  .slick-next:before {
+    font-size: 30px;
+  }
+
+  .slick-dots {
+    bottom: -10px;
+  }
+
+  .slick-dots li button:before {
+    font-size: 8px;
+  }
+}
+
