--- a/src/pages/Resume.css
+++ b/src/pages/Resume.css
@@ -4,7 +4,8 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin-top: 5%;
+  margin-top: 6vw;
+  margin-bottom: 5vw;
 }
 
 .download-cv {
@@ -21,7 +22,7 @@
   font-family: Roboto;
   font-size: 32px;
   margin-top: 15px;
-  margin-bottom: 192px;
+  margin-bottom: 15vw;
 }
 .resume-img{
   margin-top: 15vw;
@@ -32,7 +33,6 @@
   color: white;
   font-size: 20px;
   font-weight: 900;
-  
 }
 
 .download-icon{
