--- a/src/pages/Work.css
+++ b/src/pages/Work.css
@@ -13,7 +13,9 @@
   justify-content: center;
   text-align: center;
 }
-
+.metaMask{
+  text-decoration: none;
+}
 .img-project1,
 .img-project2,
 .img-project3,
