--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -208,6 +208,7 @@
     justify-content: center;
     gap: 1.5vw;
     margin: 2vw;
+    margin-right: 19vw;
   }
 
 .icon-container svg {
@@ -259,12 +260,16 @@
     width: 65px;
     height: 65px;
   }
+  .arrow-svg{
+    width: 16px;
+  }
   .view-project {
-    width: 200px;
-    height: 40px;
-    font-size: 20px;
+    width: 167px;
+    height: 39px;
+    font-size: 16px;
     margin-top: 10px;
     margin-bottom: 50px;
+    margin-right: 7vw;
   }
   .bfp {
     margin: 0;
