--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -1,10 +1,10 @@
 .game-container{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin-top: 6vw;
     margin-bottom: 5vw;
     color: white;
+    font-size: 3rem;
 }
