added maring-top to image container

--- a/src/pages/Resume.css
+++ b/src/pages/Resume.css
@@ -24,6 +24,10 @@
   margin-top: 15px;
   margin-bottom: 15vw;
 }
+
+.img-resume{
+   margin-top: 5vh;
+}
 .resume-img{
   margin-top: 15vw;
   width: 36vw;
